# swagger_output.json
@@ -741,6 +741,82 @@
         }
       }
     },
+    "/api/upload/file": {
+      "post": {
+        "tags": [
+          "Student Reservation"
+        ],
+        "summary": "學生預約課程",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReserveCourseResponseModel"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReserveCourseResponseModel"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error400ResponseModel"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error400ResponseModel"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error500ResponseModel"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error500ResponseModel"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ReserveCourseRequestModel"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/student_reservation/status_update": {
+      "patch": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/teacher_info/": {
       "get": {
         "tags": [
@@ -931,6 +1007,98 @@
           {
             "bearerAuth": []
           }
+        ]
+      }
+    },
+    "/api/shop/payment_create": {
+      "post": {
+        "tags": [
+          "Shop"
+        ],
+        "summary": "建立付款",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PaymentCreateResponseModel"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/PaymentCreateResponseModel"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error400ResponseModel"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error400ResponseModel"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error500ResponseModel"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error500ResponseModel"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PaymentCreateRequestModel"
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer"
+      }
+    },
+    "schemas": {
+      "StringValueModel": {
+        "type": "string",
+        "example": "string"
+      },
+      "Error400ResponseModel": {
+        "type": "object",
+        "required": [
+          "status",
+          "message"
         ],
         "requestBody": {
           "required": true,
@@ -3677,16 +3845,112 @@
           }
         }
       },
-      "UploadResponseModel": {
+      "PaymentCreateRequestModel": {
         "type": "object",
+        "required": [
+          "name",
+          "email",
+          "region",
+          "city",
+          "district",
+          "address",
+          "invoice",
+          "invoice_way",
+          "purchase_items"
+        ],
         "properties": {
-          "fileUrl": {
-            "type": "string",
-            "description": "檔案的網址"
+          "name": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "region": {
+            "type": "string"
+          },
+          "city": {
+            "type": "string"
+          },
+          "district": {
+            "type": "string"
+          },
+          "address": {
+            "type": "string"
+          },
+          "invoice": {
+            "type": "string"
+          },
+          "invoice_way": {
+            "type": "string"
+          },
+          "purchase_items": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "required": [
+                "course_id",
+                "purchase_item_id"
+              ],
+              "properties": {
+                "course_id": {
+                  "type": "string"
+                },
+                "purchase_item_id": {
+                  "type": "string"
+                }
+              }
+            }
           }
         },
         "example": {
-          "fileUrl": "string"
+          "name": "string",
+          "email": "string",
+          "region": "string",
+          "city": "string",
+          "district": "string",
+          "address": "string",
+          "invoice": "string",
+          "invoice_way": "string",
+          "purchase_items": [
+            {
+              "course_id": "string",
+              "purchase_item_id": "string"
+            }
+          ]
+        }
+      },
+      "PaymentCreateResponseModel": {
+        "type": "object",
+        "required": [
+          "status",
+          "data"
+        ],
+        "properties": {
+          "status": {
+            "type": "boolean"
+          },
+          "data": {
+            "type": "object",
+            "required": [
+              "message",
+              "payment_id"
+            ],
+            "properties": {
+              "message": {
+                "type": "string"
+              },
+              "payment_id": {
+                "type": "string"
+              }
+            }
+          }
+        },
+        "example": {
+          "status": true,
+          "data": {
+            "message": "建立付款成功",
+            "payment_id": "string"
+          }
         }
       }
     }
